2014-02-17  ChangSeok Oh  <changseok.oh@collabora.com>

        [GTK] MEDIA_CONTROLS_SCRIPT depends on VIDEO_TRACK
        https://bugs.webkit.org/show_bug.cgi?id=128799

        Reviewed by Philippe Normand.

        MEDIA_CONTROLS_SCRIPT has a dependency on VIDEO_TRACK. So it causes a build break
        if building with autotools. cmake system has enabled it as default. So I propose
        enabling VIDEO_TRACK as well.

        * Source/autotools/SetupWebKitFeatures.m4:

2014-02-14  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r164090.
        http://trac.webkit.org/changeset/164090
        https://bugs.webkit.org/show_bug.cgi?id=128807

        It broke the EFL build (Requested by Ossy on #webkit).

        * Source/cmake/OptionsCommon.cmake:
        * Source/cmake/OptionsEfl.cmake:

2014-02-09  Martin Robinson  <mrobinson@igalia.com>

        [GTK] [CMake] JavaScriptCore crashes in JSC::eval
        https://bugs.webkit.org/show_bug.cgi?id=128434

        Extend a fix for EFL to all ports that use GCC. Also include further fixes
        that were applied only to the autotools build.

        Reviewed by Gyuyoung Kim.

        * Source/cmake/OptionsCommon.cmake: Add -fno-omit-frame-pointer to all ports as well
        as -fno-tree-dce, which is necessary for GTK+.
        * Source/cmake/OptionsEfl.cmake: The GCC flag additions are now in the common options file.

2014-02-04  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK][CMake] Generate GObject DOM bindings .symbols files
        https://bugs.webkit.org/show_bug.cgi?id=126210

        Reviewed by Martin Robinson.

        * Source/PlatformGTK.cmake: add checking DOM bindings API as a dependency
        for documentation generation.

2014-02-13  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        [GTK] MEDIA_CONTROLS_SCRIPT support
        https://bugs.webkit.org/show_bug.cgi?id=123097

        Reviewed by Jer Noble.
